fixed header box being too long

--- a/app/assets/stylesheets/boxes.css
+++ b/app/assets/stylesheets/boxes.css
@@ -47,7 +47,7 @@
 
 #profile-header-box {
   min-width: 300px;
-  max-width: 810px;
+  max-width: 790px;
   min-height: 100px;
   margin: auto;
   background-color: #333333;
